--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,56 +1,35 @@
-version: '3.8'
+# SAL Accounting System - Docker Compose
+# MariaDB 11.7
 
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: sal-mysql
+  db:
+    image: mariadb:11.7
+    container_name: sal-mariadb
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-sal_accounting}
-      MYSQL_USER: ${MYSQL_USER:-sal_user}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-sal_password}
+      MARIADB_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
+      MARIADB_DATABASE: ${MYSQL_DATABASE:-sal_accounting}
+      MARIADB_USER: ${MYSQL_USER:-sal_user}
+      MARIADB_PASSWORD: ${MYSQL_PASSWORD:-sal_password}
     ports:
       - "${MYSQL_PORT:-3306}:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
-      - ./mysql/init:/docker-entrypoint-initdb.d
-      - ./mysql/conf.d:/etc/mysql/conf.d
-    command: >
-      --character-set-server=utf8mb4
-      --collation-server=utf8mb4_unicode_ci
-      --default-authentication-plugin=mysql_native_password
-      --innodb-buffer-pool-size=256M
-      --max-connections=200
+      - sal_db_data:/var/lib/mysql
+      - ./mysql/init:/docker-entrypoint-initdb.d:ro
+      - ./mysql/conf.d:/etc/mysql/conf.d:ro
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --innodb-buffer-pool-size=256M
+      - --max-connections=200
+      - --transaction-isolation=REPEATABLE-READ
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD:-rootpassword}"]
+      test: [ "CMD", "healthcheck.sh", "--connect", "--innodb_initialized" ]
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - sal-network
-
-  phpmyadmin:
-    image: phpmyadmin:latest
-    container_name: sal-phpmyadmin
-    restart: unless-stopped
-    environment:
-      PMA_HOST: mysql
-      PMA_PORT: 3306
-      PMA_USER: root
-      PMA_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
-    ports:
-      - "${PMA_PORT:-8080}:80"
-    depends_on:
-      mysql:
-        condition: service_healthy
-    networks:
-      - sal-network
+      start_period: 30s
 
 volumes:
-  mysql_data:
+  sal_db_data:
     driver: local
-
-networks:
-  sal-network:
-    driver: bridge
